--- a/index.html
+++ b/index.html
@@ -7,10 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assec/styles/reset.css">
     <link rel="stylesheet" href="./assec/styles/style.css">
-    <title>Document</title>
+    <title>User cards</title>
 </head>
 
 <body>
+    <section class="cards-container">
+        <h1 class="title-conteiner">Elon Musk</h1>
+        <article class="card-wrapper">
+            <div class="bg-header"></div>
+            <section class="card-content">
+                <div class="photo-wrapper">
+                    <img src="" alt="" class="photo-profile">
+                </div>
+                <h2 class="user-name capitalize">elon musk</h2>
+                <adress class="adress-profile">
+                    <img src="" alt="" class="icon-map"><span>san-francisco, california</span class="capitalize"> ,
+                    <span class="uppercase">usa</span>
+                    </img>
+                </adress>
+                <div class="btn-container">
+                    <button class="bth-left capitalize">follow</button>
+                    <button class="bth-right capitalize">send message</button>
+                </div>
+                <p class="description-profile">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+                    quibusdam.</p>
+            </section>
+            <footer>
+                <ul>
+                    <li><a href="https://www.facebook.com" target="_blank" class="icon-fb">fb</a></li>
+                    <li><a href="https://www.google.com" target="_blank" class="icon-google">gg</a></li>
+                    <li><a href="https://www.twitter.com" target="_blank" class="icon-twitter">tw</a></li>
+                </ul>
+            </footer>
+        </article>
+    </section>
+
+
 
 </body>
 
