Add class name for link

--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@
                 <p class="description-profile">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
                     quibusdam.</p>
             </section>
-            <footer>
-                <ul>
-                    <li><a href="https://www.facebook.com" target="_blank" class="icon-fb">fb</a></li>
-                    <li><a href="https://www.google.com" target="_blank" class="icon-google">gg</a></li>
-                    <li><a href="https://www.twitter.com" target="_blank" class="icon-twitter">tw</a></li>
+            <footer class="social-footer">
+                <ul class="list-social">
+                    <li class="link-social">
+                        <a href="https://www.facebook.com" target="_blank" class="icon-fb">fb</a>
+                    </li>
+                    <li class="link-social">
+                        <a href="https://www.google.com" target="_blank" class="icon-google">gg</a>
+                    </li>
+                    <li class="link-social">
+                        <a href="https://www.twitter.com" target="_blank" class="icon-twitter">tw </a>
+                    </li>
                 </ul>
             </footer>
         </article>
