Add atribute alternative text for images

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <div class="bg-header"></div>
             <section class="card-content">
                 <div class="photo-wrapper">
-                    <img src="" alt="" class="photo-profile">
+                    <img src="./assec/images/elon.jpg" alt="user photo profule" class="photo-profile">
                 </div>
                 <h2 class="user-name capitalize">elon musk</h2>
                 <adress class="adress-profile">
-                    <img src="" alt="" class="icon-map"><span>san-francisco, california</span class="capitalize"> ,
+                    <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco, california</span
+                        class="capitalize"> ,
                     <span class="uppercase">usa</span>
                     </img>
                 </adress>
@@ -35,13 +36,16 @@
             <footer class="social-footer">
                 <ul class="list-social">
                     <li class="link-social">
-                        <a href="https://www.facebook.com" target="_blank" class="icon-fb">fb</a>
+                        <a href="https://www.facebook.com" target="_blank" class="icon-fb"><img
+                                src="./assec/icons/facebookw.png" alt="facebook icon"></a>
                     </li>
                     <li class="link-social">
-                        <a href="https://www.google.com" target="_blank" class="icon-google">gg</a>
+                        <a href="https://www.google.com" target="_blank" class="icon-google"><img
+                                src="./assec/icons/googlew.png" alt="google icon"></a>
                     </li>
                     <li class="link-social">
-                        <a href="https://www.twitter.com" target="_blank" class="icon-twitter">tw </a>
+                        <a href="https://www.twitter.com" target="_blank" class="icon-twitter"><img
+                                src="./assec/icons/twitterw.png" alt="twitter icon"> </a>
                     </li>
                 </ul>
             </footer>
