Add iages for othe profile and stylized user page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section class="cards-container">
-        <h1 class="title-conteiner">Elon Musk</h1>
+
         <article class="card-wrapper">
             <div class="bg-header"></div>
             <section class="card-content">
@@ -20,7 +20,7 @@
                     <img src="./assec/images/elon.jpg" alt="user photo profule" class="photo-profile">
                 </div>
                 <h2 class="user-name capitalize">elon musk</h2>
-                <adress class="adress-profile">
+                <adress class="adress-profile capitalize">
                     <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco, california</span
                         class="capitalize"> ,
                     <span class="uppercase">usa</span>
@@ -30,22 +30,81 @@
                     <button class="bth-left capitalize">follow</button>
                     <button class="bth-right capitalize">send message</button>
                 </div>
-                <p class="description-profile">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
-                    quibusdam.</p>
+                <p class="description-profile"> SpaceX , StarLink</p>
             </section>
             <footer class="social-footer">
                 <ul class="list-social">
-                    <li class="link-social">
-                        <a href="https://www.facebook.com" target="_blank" class="icon-fb"><img
-                                src="./assec/icons/facebookw.png" alt="facebook icon"></a>
+                    <li class="link-inline">
+                        <a href="https://www.facebook.com" target="_blank" class="icon-fb link-social"></a>
                     </li>
-                    <li class="link-social">
-                        <a href="https://www.google.com" target="_blank" class="icon-google"><img
-                                src="./assec/icons/googlew.png" alt="google icon"></a>
+                    <li class="link-inline">
+                        <a href="https://www.google.com" target="_blank" class="icon-google link-social"></a>
                     </li>
-                    <li class="link-social">
-                        <a href="https://www.twitter.com" target="_blank" class="icon-twitter"><img
-                                src="./assec/icons/twitterw.png" alt="twitter icon"> </a>
+                    <li class="link-inline">
+                        <a href="https://www.twitter.com" target="_blank" class="icon-twitter link-social"></a>
+                    </li>
+                </ul>
+            </footer>
+        </article>
+        <article class="card-wrapper">
+            <div class="bg-header"></div>
+            <section class="card-content">
+                <div class="photo-wrapper">
+                    <img src="./assec/images/polyakov.jpg" alt="user photo profule" class="photo-profile">
+                </div>
+                <h2 class="user-name capitalize">max polyakov</h2>
+                <adress class="adress-profile capitalize">
+                    <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>zaporizhzhya, ukraine</span></img>
+                </adress>
+                <div class="btn-container">
+                    <button class="bth-left capitalize">follow</button>
+                    <button class="bth-right capitalize">send message</button>
+                </div>
+                <p class="description-profile"> Noosphere, FireFly aerospace</p>
+            </section>
+            <footer class="social-footer">
+                <ul class="list-social">
+                    <li class="link-inline">
+                        <a href="https://www.facebook.com" target="_blank" class="icon-fb link-social"></a>
+                    </li>
+                    <li class="link-inline">
+                        <a href="https://www.google.com" target="_blank" class="icon-google link-social"></a>
+                    </li>
+                    <li class="link-inline">
+                        <a href="https://www.twitter.com" target="_blank" class="icon-twitter link-social"></a>
+                    </li>
+                </ul>
+            </footer>
+        </article>
+        <article class="card-wrapper">
+            <div class="bg-header"></div>
+            <section class="card-content">
+                <div class="photo-wrapper">
+                    <img src="./assec/images/brenson.jpg" alt="user photo profule" class="photo-profile">
+                </div>
+                <h2 class="user-name capitalize">Richard Brenson</h2>
+                <adress class="adress-profile capitalize">
+                    <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>pittsburgh</span class="capitalize">
+                    ,
+                    <span class="uppercase">usa</span>
+                    </img>
+                </adress>
+                <div class="btn-container">
+                    <button class="bth-left capitalize">follow</button>
+                    <button class="bth-right capitalize">send message</button>
+                </div>
+                <p class="description-profile">Virgin Galactic , Virgin Atlantic Airways</p>
+            </section>
+            <footer class="social-footer">
+                <ul class="list-social">
+                    <li class="link-inline">
+                        <a href="https://www.facebook.com" target="_blank" class="icon-fb link-social"></a>
+                    </li>
+                    <li class="link-inline">
+                        <a href="https://www.google.com" target="_blank" class="icon-google link-social"></a>
+                    </li>
+                    <li class="link-inline">
+                        <a href="https://www.twitter.com" target="_blank" class="icon-twitter link-social"></a>
                     </li>
                 </ul>
             </footer>
