Add hover effect forbutton

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <h2 class="user-name capitalize">elon musk</h2>
                 <adress class="adress-profile capitalize">
-                    <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco, california</span
+                    <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco, </span
                         class="capitalize"> ,
                     <span class="uppercase">usa</span>
                     </img>
@@ -30,7 +30,8 @@
                     <button class="bth-left capitalize">follow</button>
                     <button class="bth-right capitalize">send message</button>
                 </div>
-                <p class="description-profile"> SpaceX , StarLink</p>
+                <p class="description-profile"> SpaceX , </br>
+                    StarLink</p>
             </section>
             <footer class="social-footer">
                 <ul class="list-social">
@@ -80,7 +81,7 @@
             <div class="bg-header"></div>
             <section class="card-content">
                 <div class="photo-wrapper">
-                    <img src="./assec/images/brenson.jpg" alt="user photo profule" class="photo-profile">
+                    <img src="./assec/images/brenson.jpg" alt="user photo profile" class="photo-profile">
                 </div>
                 <h2 class="user-name capitalize">Richard Brenson</h2>
                 <adress class="adress-profile capitalize">
