Add overflow for text

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             <div class="bg-header"></div>
             <section class="card-content">
                 <div class="photo-wrapper">
-                    <img src="./assec/images/elon.jpg" alt="user photo profule" class="photo-profile">
+                    <img src="./assec/images/elon.jpg" alt="user photo profile" class="photo-profile">
                 </div>
-                <h2 class="user-name capitalize">elon musk</h2>
-                <adress class="adress-profile capitalize">
-                    <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco, </span
-                        class="capitalize"> ,
+                <h2 class="user-name capitalize text-overflow">elon musk</h2>
+                <adress class="adress-profile capitalize text-overflow">
+                    <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco,
+                        california </span class="capitalize">
                     <span class="uppercase">usa</span>
                     </img>
                 </adress>
                 <div class="btn-container">
-                    <button class="bth-left capitalize">follow</button>
-                    <button class="bth-right capitalize">send message</button>
+                    <button class="bth-left capitalize text-overflow">follow</button>
+                    <button class="bth-right capitalize text-overflow">send message</button>
                 </div>
-                <p class="description-profile"> SpaceX , </br>
+                <p class="description-profile text-overflow"> SpaceX ,
                     StarLink</p>
             </section>
             <footer class="social-footer">
@@ -51,17 +51,17 @@
             <div class="bg-header"></div>
             <section class="card-content">
                 <div class="photo-wrapper">
-                    <img src="./assec/images/polyakov.jpg" alt="user photo profule" class="photo-profile">
+                    <img src="./assec/images/polyakov.jpg" alt="user photo profile" class="photo-profile">
                 </div>
-                <h2 class="user-name capitalize">max polyakov</h2>
-                <adress class="adress-profile capitalize">
+                <h2 class="user-name capitalize text-overflow">max polyakov</h2>
+                <adress class="adress-profile capitalize text-overflow">
                     <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>zaporizhzhya, ukraine</span></img>
                 </adress>
                 <div class="btn-container">
-                    <button class="bth-left capitalize">follow</button>
-                    <button class="bth-right capitalize">send message</button>
+                    <button class="bth-left capitalize text-overflow">follow</button>
+                    <button class="bth-right capitalize text-overflow">send message</button>
                 </div>
-                <p class="description-profile"> Noosphere, FireFly aerospace</p>
+                <p class="description-profile text-overflow"> Noosphere, FireFly aerospace</p>
             </section>
             <footer class="social-footer">
                 <ul class="list-social">
@@ -83,18 +83,18 @@
                 <div class="photo-wrapper">
                     <img src="./assec/images/brenson.jpg" alt="user photo profile" class="photo-profile">
                 </div>
-                <h2 class="user-name capitalize">Richard Brenson</h2>
-                <adress class="adress-profile capitalize">
+                <h2 class="user-name capitalize text-overflow">Richard Brenson</h2>
+                <adress class="adress-profile capitalize text-overflow">
                     <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>pittsburgh</span class="capitalize">
                     ,
                     <span class="uppercase">usa</span>
                     </img>
                 </adress>
                 <div class="btn-container">
-                    <button class="bth-left capitalize">follow</button>
-                    <button class="bth-right capitalize">send message</button>
+                    <button class="bth-left capitalize text-overflow">follow</button>
+                    <button class="bth-right capitalize text-overflow">send message</button>
                 </div>
-                <p class="description-profile">Virgin Galactic , Virgin Atlantic Airways</p>
+                <p class="description-profile text-overflow">Virgin Galactic , Virgin Atlantic Airways</p>
             </section>
             <footer class="social-footer">
                 <ul class="list-social">
