--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <section class="cards-container">
-
+        <h1>Private space company</h1>
         <article class="card-wrapper">
+
             <div class="bg-header"></div>
             <section class="card-content">
                 <div class="photo-wrapper">
@@ -22,7 +23,7 @@
                 <h2 class="user-name capitalize text-overflow">elon musk</h2>
                 <adress class="adress-profile capitalize text-overflow">
                     <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco,
-                        california </span class="capitalize">
+                        california, </span class="capitalize">
                     <span class="uppercase">usa</span>
                     </img>
                 </adress>
