Edit button size for overflow

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2 class="user-name capitalize text-overflow">elon musk</h2>
                 <adress class="adress-profile capitalize text-overflow">
                     <img src="./assec/icons/mapb.png" alt="" class="icon-map"><span>san-francisco,
-                        california, </span class="capitalize">
+                    </span class="capitalize">
                     <span class="uppercase">usa</span>
                     </img>
                 </adress>
